--- a/src/main/resources/templates/list-tickets.html
+++ b/src/main/resources/templates/list-tickets.html
@@ -60,7 +60,7 @@
             <!-- Add "update" button/link -->
             <form action="#" th:action="@{/ticket/edit}" method="POST">
 
-              <input type="hidden" name="employeeId" th:value="${ticket.id}" />
+              <input type="hidden" name="ticketId" th:value="${ticket.id}" />
               <button type="submit" class="btn btn-info btn-sm ml-3 mr-1">Edit</button>
 
             </form>
@@ -71,9 +71,9 @@
             <!-- Add "delete" button/link -->
             <form action="#" th:action="@{/ticket/delete}" method="POST">
 
-              <input type="hidden" name="employeeId" th:value="${ticket.id}" />
+              <input type="hidden" name="ticketId" th:value="${ticket.id}" />
               <button type="submit" class="btn btn-danger btn-sm"
-                      onclick="if (!(confirm('Are you sure you want to remove this employee?'))) return false">
+                      onclick="if (!(confirm('Are you sure you want to remove this ticket?'))) return false">
                 Delete
               </button>
 
@@ -85,7 +85,7 @@
             <!-- Add "update" button/link -->
             <form action="#" th:action="@{/ticket/view}" method="POST">
 
-              <input type="hidden" name="employeeId" th:value="${ticket.id}" />
+              <input type="hidden" name="ticketId" th:value="${ticket.id}" />
               <button type="submit" class="btn btn-info btn-sm ml-3 mr-1">View</button>
 
             </form>
