Added Search Functionality, Converted to H2 Database

--- a/src/main/resources/templates/view-ticket-form.html
+++ b/src/main/resources/templates/view-ticket-form.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Ticket Tracking Application</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <style>
         table {
             border-collapse: collapse;
@@ -25,15 +25,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <!-- Brand -->
-    <a class="navbar-brand" href="#">Ticket Tracking Application</a>
-
-    <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</nav>
+<div th:insert="navbar :: navbar"></div>
 <br>
 <br>
 <div class="container">
