--- a/src/main/resources/templates/list-tickets.html
+++ b/src/main/resources/templates/list-tickets.html
@@ -2,100 +2,98 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="ISO-8859-1">
-  <title>Ticket Tracker Application</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Ticket Tracker Application</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-  <!-- Brand -->
-  <a class="navbar-brand" href="#">Ticket Tracker Application</a>
 
-  <!-- Toggler/collapsibe Button -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-</nav>
+<div th:replace="~{navbar :: navbar}"></div>
 
 <div class="container">
-  <div class="row">
-    <h1>List Tickets</h1>
-  </div>
-
-  <! Add Employee Button>
-  <div class="row">
-    <div class="col-lg-3">
-      <a th:href="@{/ticket/showTicketForm_Save}"
-         class="btn btn-primary btn-sm mb-3">
-        Add Ticket
-      </a>
+    <div class="row">
+        <h1>List Tickets</h1>
     </div>
-  </div>
+
+    <form class="form-inline" method="post" th:action="@{/ticket/search}">
+        <!-- Input field for author name -->
+        <input class="form-control-sm mr-2 mb-3" placeholder="contentORdescription" th:name="contentORdescription"
+               type="search"/>
+        <!-- Search button -->
+        <button class="btn btn-success btn-sm mb-3" type="submit">Search</button>
+    </form>
 
 
-  <table class="table table-striped table-bordered">
-    <thead class="table-dark">
-    <tr>
-      <th>Ticket Title</th>
-      <th>Ticket Short Description</th>
-      <th>Ticket Created On</th>
-      <th></th>
-    </tr>
-    </thead>
+    <div style="margin-top: 20px;"></div>
 
-    <tbody>
-    <tr th:each="ticket: ${tickets}">
-      <td th:text="${ticket.ticketTitle}"></td>
-      <td th:text="${ticket.shortDescription}"></td>
-      <td th:text="${ticket.createdOn}"></td>
 
-      <td>
+    <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+        <tr>
+            <th>Ticket Title</th>
+            <th>Ticket Short Description</th>
+            <th>Ticket Created On</th>
+            <th></th>
+        </tr>
+        </thead>
 
-        <div class="row">
-          <! Adding Update Button>
-          <div class="col-small">
-            <!-- Add "update" button/link -->
-            <form action="#" th:action="@{/ticket/edit}" method="POST">
+        <tbody>
+        <tr th:each="ticket: ${tickets}">
+            <td th:text="${ticket.ticketTitle}"></td>
+            <td th:text="${ticket.shortDescription}"></td>
+            <td th:text="${ticket.createdOn}"></td>
 
-              <input type="hidden" name="ticketId" th:value="${ticket.id}" />
-              <button type="submit" class="btn btn-info btn-sm ml-3 mr-1">Edit</button>
+            <td>
 
-            </form>
-          </div>
+                <div class="row">
+                    <! Adding Update Button>
+                    <div class="col-small">
+                        <!-- Add "update" button/link -->
+                        <form action="#" method="POST" th:action="@{/ticket/edit}">
 
-          <! Adding Delete Button>
-          <div class="col-small">
-            <!-- Add "delete" button/link -->
-            <form action="#" th:action="@{/ticket/delete}" method="POST">
+                            <input name="ticketId" th:value="${ticket.id}" type="hidden"/>
+                            <button class="btn btn-warning btn-sm ml-1 mr-1" type="submit">Edit</button>
 
-              <input type="hidden" name="ticketId" th:value="${ticket.id}" />
-              <button type="submit" class="btn btn-danger btn-sm"
-                      onclick="if (!(confirm('Are you sure you want to remove this ticket?'))) return false">
-                Delete
-              </button>
+                        </form>
+                    </div>
 
-            </form>
-          </div>
+                    <! Adding View Button>
+                    <div class="col-small">
+                        <!-- Add "update" button/link -->
+                        <form action="#" method="POST" th:action="@{/ticket/view}">
 
-          <! Adding View Button>
-          <div class="col-small">
-            <!-- Add "update" button/link -->
-            <form action="#" th:action="@{/ticket/view}" method="POST">
+                            <input name="ticketId" th:value="${ticket.id}" type="hidden"/>
+                            <button class="btn btn-info btn-sm ml-1 mr-1" type="submit">View</button>
 
-              <input type="hidden" name="ticketId" th:value="${ticket.id}" />
-              <button type="submit" class="btn btn-info btn-sm ml-3 mr-1">View</button>
+                        </form>
+                    </div>
 
-            </form>
-          </div>
-        </div>
-      </td>
-    </tr>
-    </tbody>
+                    <! Adding Delete Button>
+                    <div class="col-small">
+                        <!-- Add "delete" button/link -->
+                        <form action="#" method="POST" th:action="@{/ticket/delete}">
 
-  </table>
+                            <input name="ticketId" th:value="${ticket.id}" type="hidden"/>
+                            <button class="btn btn-danger btn-sm ml-1 mr-1" onclick="if (!(confirm('Are you sure you want to remove this ticket?'))) return false"
+                                    type="submit">
+                                Delete
+                            </button>
+
+                        </form>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+
+    </table>
 
 </div>
 </body>
