--- a/src/main/resources/templates/update-ticket-form.html
+++ b/src/main/resources/templates/update-ticket-form.html
@@ -2,74 +2,58 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="ISO-8859-1">
-  <title>Ticket Tracker Application</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta charset="ISO-8859-1">
+    <title>Ticket Tracker Application</title>
+    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-  <!-- Brand -->
-  <a class="navbar-brand" href="#">Ticket Tracker Application</a>
 
-  <!-- Toggler/collapsibe Button -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <!-- Navbar links -->
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/ticket/save}">Ticket Management</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div th:insert="navbar :: navbar"></div>
 <br>
 <br>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <h1 class="text-center"> Update Ticket </h1>
-      <div class="card-body">
-        <form th:action="@{/ticket/save}" th:object="${ticket}" method="POST">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+            <h1 class="text-center"> Update Ticket </h1>
+            <div class="card-body">
+                <form method="POST" th:action="@{/ticket/save}" th:object="${ticket}">
 
-          <input type="hidden" th:field="*{id}" />
-          <input type="hidden" th:field="*{createdOn}" />
+                    <input th:field="*{id}" type="hidden"/>
+                    <input th:field="*{createdOn}" type="hidden"/>
 
-          <div class="form-group">
-            <label>Title </label>
-            <input type="text" name="ticketTitle" th:field="*{ticketTitle}" class="form-control"
-                   placeholder="Enter ticket title" />
-          </div>
+                    <div class="form-group">
+                        <label>Title </label>
+                        <input class="form-control" name="ticketTitle" placeholder="Enter ticket title" th:field="*{ticketTitle}"
+                               type="text"/>
+                    </div>
 
-          <div class="form-group">
-            <label>Short Description </label>
-            <input type="text" name="shortDescription" th:field="*{shortDescription}" class="form-control"
-                   placeholder="Enter short description" />
-          </div>
+                    <div class="form-group">
+                        <label>Short Description </label>
+                        <input class="form-control" name="shortDescription" placeholder="Enter short description" th:field="*{shortDescription}"
+                               type="text"/>
+                    </div>
 
-          <div class="form-group">
-            <label>Content </label>
-            <input type="text" name="content" th:field="*{content}" class="form-control"
-                   placeholder="Enter content" />
-          </div>
+                    <div class="form-group">
+                        <label>Content </label>
+                        <input class="form-control" name="content" placeholder="Enter content" th:field="*{content}"
+                               type="text"/>
+                    </div>
 
-          <div class="box-footer">
-            <button type="submit" class="btn btn-primary">
-              Submit
-            </button>
-          </div>
-        </form>
+                    <div class="box-footer">
+                        <button class="btn btn-primary" type="submit">
+                            Submit
+                        </button>
+                    </div>
+                </form>
 
-        <hr>
-        <a th:href="@{/ticket/list}">Back to Ticket Listing</a>
+                <hr>
+                <a th:href="@{/ticket/list}">Back to Ticket Listing</a>
 
-      </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 
